# lx

./: .gitignore  CHANGELOG.md  Makefile  README.md  a.lx  b.lx  debug_keywords.v  debug_lexer.v  debug_lexer_error.v  debug_test.lx  debug_test.v  docker-compose.yml  dockerfile  dune-project  examples  lx.opam  lxc.opam  script.erl  test.exs  v.mod
docs/: AST_REFACTORING_PLAN.md  BACKEND_TYPE_INFERENCE_REMOVAL.md  LX1_IMPLEMENTATION_ROADMAP.md  LX_BEST_PRACTICES.md  LX_DEV_CHANGELOG.md  LX_DEV_CHANGELOG_PART2.md  LX_SYNTAX_REFERENCE.md  Lx_DEV_CHANGELOG.md  Lx_SYNTAX_REFERENCE.md  PARSER_REFACTORING_COMPLETE.md  TASK_SUPERVISOR_WORKER_IMPLEMENTATION.md  VARIABLE_SCOPE_IMPLEMENTATION.md  compiler_rewrite_strategy.md
examples/: demo_errors.ml  dune  error_demo.lx  minimal_worker.lx  otp_worker_example.lx  simple_otp_worker.lx  working_worker.erl  working_worker.lx  working_worker_test_worker.erl
lx/: Makefile  README.md  README_VALIDATION.md  TASK_01_COMPLETE.md  TASK_03_COMPLETE.md  TASK_04_COMPLETE.md  TASK_05_COMPLETE.md  TASK_06_COMPLETE.md  TASK_08_COMPLETE.md  TASK_10_COMPLETE.md  TASK_10_COMPLETE_IMPLEMENTATION.md  TASK_10_FINAL_STATUS.md  USAGE.md  VALIDATION_SYSTEM_SUMMARY.md  dune  erl_crash.dump  lx  lx-run  lx1  main.ml  main.v  rebar.config  test_direct.erl  test_erlang_generator.beam  (+1 more)
lx/compiler/: app_generator.ml  ast.ml  beam_analyzer.ml  compiler.ml  compiler.mli  compiler.v  dependency_resolver.ml  dune  error.ml  error_formatter.ml  lexer.mll  linter.ml  linter.mli  otp_validator.ml  parser.mly  rebar_manager.ml  typechecker.ml
tests/: README.md  debug_binary_parsing.lx  debug_binary_spec.lx  dune  test_assignment.ml  test_ast_types.ml  test_blocks.ml  test_build_cleanup.ml  test_compiler.ml  test_control_flow_enhanced.ml  test_error_handling.ml  test_error_messages.ml  test_examples.ml  test_for_loops.ml  test_function_calls.ml  test_guards.ml  test_lexer.ml  test_logical_operators.ml  test_main.ml  test_maps.ml  test_match_rescue.ml  test_module_generation.ml  test_otp_validator.ml  test_parser.ml  test_pattern_matching.ml  test_record_update.ml  test_scoping.ml  test_send_operator.ml  test_special_syntax.ml  test_supervisor_errors.ml  test_tuple_detection.ml  test_typechecker.ml
(+907 files in other folders)
