opam-version: "2.0"
name: "lxc"
version: "0.1.0"
synopsis: "LX Language Compiler"
description: "A compiler for the LX programming language"
maintainer: ["helder"]
author: ["helder"]
depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.10"}
  "menhir"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]