(executable
 (public_name test_lxc)
 (name test_main)
 (libraries compiler alcotest str)
 (modules
  test_main
  test_lexer
  test_parser
  test_compiler
  test_examples
  test_ast_types
  test_typechecker
  test_otp_validator
  test_module_generation
  test_error_handling
  test_function_calls))

(rule
 (alias runtest)
 (action
  (run ./test_main.exe)))
