(executable
 (public_name test_lx)
 (name test_main)
 (libraries compiler alcotest str unix)
 (modules
  test_main
  test_lexer
  test_parser
  test_compiler
  test_examples
  test_ast_types
  test_typechecker
  test_otp_validator
  test_module_generation
  test_error_handling
  test_function_calls
  test_error_messages
  test_assignment
  test_blocks
  test_scoping
  test_special_syntax
  test_supervisor_errors
  test_build_cleanup
  test_guards
  test_logical_operators
  test_send_operator
  test_tuple_detection
  test_record_update
  test_maps
  test_pattern_matching))

(rule
 (alias runtest)
 (action
  (run ./test_main.exe)))
