(library
 (name compiler)
 (public_name lx.compiler)
 (libraries unix str)
 (modules
  ast
  lexer
  parser
  compiler
  typechecker
  otp_validator
  linter
  error
  error_formatter
  app_generator
  rebar_manager
  beam_analyzer
  dependency_resolver))

(menhir
 (modules parser))

(ocamllex lexer)
